# fiuto

./: Cargo.toml  README.md  devbox.json  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
src/: collector.rs  digger.rs  lib.rs  main.rs  parser.rs  shuffler.rs
src/testdata/: get_info.yml  get_info_basic_auth.yml  get_info_deprecated.yml  get_more_info_with_jwt.yml  multi_endpoint.yml  multiple_servers.yml  post_info_nested_property.yml  post_info_nested_property_2.yml  post_info_with_jwt.yml  post_login.yml  post_login_deprecated.yml  post_login_obj_example.yml  post_login_openapi_31.yml  post_login_properties_example.yml  post_login_request_body_ref.yml  post_non_json_content.yml  put_settings.yml  server_from_env.yml  single_server.yml  spec.yml
tests/: integrations.rs
