[package]
name = "fiuto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
openapiv3 = "2"
reqwest = "0.12"
serde = "1"
serde_json = "1"
serde_yaml_bw = "2.5"
tabled = "0.20"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
async-trait = "0.1"

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
