[package]
name = "fiuto"
version = "0.1.0"
edition = "2024"
description = "CLI tool for testing OpenAPI specifications by drilling all endpoint combinations"
license = "MIT"
repository = "https://github.com/guerinoni/fiuto"
keywords = ["openapi", "testing", "api", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
oas3 = { version = "0.22", features = ["yaml-spec"] }
reqwest = "0.13"
serde = "1"
serde_json = "1"
serde_yaml_bw = "2.5"
tabled = "0.20"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
async-trait = "0.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
